[project]
name = "roadmap-ppt-generator"
version = "1.0.0"
description = "Generate professional PowerPoint presentations from Excel roadmap data"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "python-pptx>=0.6.21",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
roadmap-ppt = "roadmap_ppt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/roadmap_ppt"]

[tool.uv]
dev-dependencies = []

